2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.5.2 ===

	* abicheck.sh: Make work in make distcheck.

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Use the same prefix when creating 
	gdk-pixbuf-marshal.c and gdk-pixbuf-marshal.h

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_class_init): _-prefix
	the marshalers.

2004-08-24  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_new_with_mime_type): Use
	the correct index and compare correctly, reported by Tommi Komulainen.
	(gdk_pixbuf_loader_new_with_mime_type): 

	* gdk-pixdata.c (gdk_pixdata_from_pixbuf): Work around bugs in
	the runlength encoder by forcing rowstride * height to be 
	divisible by bpp.  (#150882)

Sun Aug 22 03:20:56 2004  Matthias Clasen  <maclas@gmx.de>

	* pixops/pixops.c (pixops_scale_nearest): Fix a mixup in the handling
	of dest_channels.  (#111922, Christophe Fergeau)

Fri Aug 20 11:59:10 2004  Owen Taylor  <otaylor@redhat.com>

	* io-bmp.c: Fix infinite loop that can occur for bad
	image data (#150601, Chris Evans, Manish Singh)

2004-08-17  Matthias Clasen  <mclasen@redhat.com>

	* abicheck.sh: No need for INCLUDE_INTERNAL_SYMBOLS any more.

	* Makefile.am (gdk-pixbuf-alias.h): Don't use cpp to filter the symbols.

	* makegdkpixbufalias.pl: Move the #ifdef processing into the perl script,
	and keep the #ifdefs which differentiate between platforms.

	* gdk-pixbuf.symbols: Remove the marshalers.

	* Makefile.am (stamp-gdk-pixbuf-marshal.h): _-prefix the marshalers.

Thu Aug 12 22:19:12 2004  Matthias Clasen  <maclas@gmx.de>

	* io-bmp.c (DecodeHeader): Properly determine the number of 
	colors in an OS/2 BMP file.  (#150003, Jon-Kare Hellan)

2004-08-12  Matthias Clasen  <mclasen@redhat.com>

	* pixops/pixops.c: Remove C99-isms.  (#149967, Vincent Noel)

Wed Aug 11 22:56:55 2004  Matthias Clasen  <maclas@gmx.de>

	* abicheck.sh: Check all symbols.

2004-08-11  Matthias Clasen  <mclasen@redhat.com>
