@@ -1,3 +1,7 @@
+Wed Aug 25 17:23:23 2004  Manish Singh  <yosh@gimp.org>
+
+	* io-gif.c: remove unused set_need_recomposite() function.
+
 2004-08-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.5.2 ===
